--- a/BulkyBookWeb/Areas/Employee/Views/Home/Index.cshtml
+++ b/BulkyBookWeb/Areas/Employee/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model BulkyBook.Models.ViewModels.HomeVM
 
+
+
+
 <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
@@ -9,8 +12,7 @@
           <h2 class="mt-1"></h2>
 
           <div class="btns" style="">
-            
-            @if (User.Identity.IsAuthenticated)
+                @if (User.Identity.IsAuthenticated)
                     {
                         
                     }
@@ -18,7 +20,7 @@
            {
                    <a asp-area="Identity" asp-page="/Account/Register" class="btn-book animated fadeInUp scrollto" style="margin-left:0px;" >Create Account</a>
                     }
-            <a href="#menu" class="btn-menu animated fadeInUp scrollto" style="background:#cda45e;margin-left:15px;">Watch Live Now</a>
+            <a href="#menu" class="btn-menu animated fadeInUp scrollto blinkin" style="background:transparent;margin-left:15px;color:red;border:2px solid red;border-radius:0px;"><i class="bi bi-record-circle" style="margin-right:5px;"></i>Live Now</a>
           </div>
         </div>
         <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
@@ -64,7 +66,7 @@
         </div>
 
       </div>
-    </section>*@
+    </sect:focuson>*@
     <!-- End About Section -->
 
     <!-- ======= Why Us Section ======= -->
@@ -135,9 +137,9 @@
            
            @foreach(var item in Model.Videolist)
                 {
-                     <div class="col-lg-6 menu-item filter-@item.Category.Name row" style="max-height:400px!important;">
+                     <div class="col-lg-6 menu-item filter-@item.Category.Name row">
                           <div class="col-2">
-              <img src="@item.ImageUrl" class="menu-img" alt="" style="width:180px;">
+              <img src="@item.ImageUrl" class="menu-img" alt="" style="width:180px;height:250px;">
             </div>
 
                          <div class="col-8 row" style="display:flex;flex-direction:column;">
@@ -150,17 +152,18 @@
                <h6 style="color:#cda45e;">
                     @item.Category.Name
                 </h6>
-            </div>
-         
-             <div class="menu-ingredients col">
-                            @if (User.Identity.IsAuthenticated)
+                 @if (User.Identity.IsAuthenticated)
                             {
-                                <a asp-action="Details" asp-route-videoId="@item.Id"class="btntransparent btn btn-lg " style="border-radius:0px!important;font-size:15px;">Watch Live</a>
+                                <a asp-action="Details" asp-route-videoId="@item.Id"class="blinkin btn btn-lg " style="border:2px solid red;font-size:14px;border-radius:0px!important;color:red!important;text-transform:uppercase;letter-spacing:0.5px;"><i class="bi bi-record-circle" style="margin-right:5px;"></i>Live Now</a>
                             }
                             else
                             {
-                                <a asp-area="Identity" asp-page="/Account/Login" class="btntransparent btn btn-lg" style="font-size:14px;border-radius:0px!important;">Watch Live</a>
+                                <a asp-area="Identity" asp-page="/Account/Login" class="btn btn-lg blinkin" style="border:2px solid red;font-size:14px;border-radius:0px!important;color:red!important;text-transform:uppercase;letter-spacing:0.5px;"><i class="bi bi-record-circle" style="margin-right:5px;"></i>Live Now</a>
                             }
+            </div>
+         
+             <div class="menu-ingredients col">
+                           
                             
             </div>
              </div>
@@ -276,7 +279,7 @@
     <!-- End Specials Section -->
 
     <!-- ======= Events Section ======= -->
-    <section id="events" class="events">
+   @* <section id="events" class="events">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -293,13 +296,11 @@
                   <img src="~/img/event-birthday.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  @*<h3>Birthday Parties</h3>*@
+                  
                   <div class="price">
-                    @*<p><span>$189</span></p>*@
+                    
                   </div>
-                @*  <p >
-                   Where to celebrate birthday in Chitwan? Don’t worry. We are solving your problems. The best place for a birthday party is Raja & Rani Resturant.
-                  </p>*@
+               
                   <ul>
                     <li><i class="bi bi-check-circled">1</i> Birthday Parties</li>
                     <li><i class="bi bi-check-circled">2</i> Private Parties</li>
@@ -317,9 +318,10 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
+            <!-- End testimonial item -->
 
-           @* <div class="swiper-slide">
+           <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
                   <img src="~/img/event-private.jpg" class="img-fluid" alt="">
@@ -344,10 +346,10 @@
                   </p>
                 </div>
               </div>
-            </div>*@
+            </div>
             <!-- End testimonial item -->
 
-            @*<div class="swiper-slide">
+            <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
                   <img src="~/img/event-custom.jpg" class="img-fluid" alt="">
@@ -372,7 +374,7 @@
                   </p>
                 </div>
               </div>
-            </div>*@
+            </div>
             <!-- End testimonial item -->
 
           </div>
@@ -380,7 +382,7 @@
         </div>
 
       </div>
-    </section>
+    </section>*@
     <!-- End Events Section -->
 
     <!-- ======= Book A Table Section ======= -->
@@ -521,7 +523,7 @@
     <!-- End Testimonials Section -->
 
     <!-- ======= Gallery Section ======= -->
-    <section id="gallery" class="gallery">
+   @* <section id="gallery" class="gallery">
 
       <div class="container" data-aos="fade-up">
         <div class="section-title">
@@ -601,7 +603,7 @@
         </div>
 
       </div>
-    </section>
+    </section>*@
     <!-- End Gallery Section -->
 
     <!-- ======= Chefs Section ======= -->
@@ -685,15 +687,15 @@
         </div>
       </div>
 
-      <div data-aos="fade-up">
+     @* <div data-aos="fade-up">
         <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
-      </div>
+      </div>*@
 
       <div class="container" data-aos="fade-up">
 
-        <div class="row mt-5">
+        <div class="row">
 
-          <div class="col-lg-4">
+        @*  <div class="col-lg-4">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -724,31 +726,43 @@
 
             </div>
 
-          </div>
+          </div>*@
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+          <div class="col-lg-12">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form asp-action="Message" method="post" class="">
+                <input hidden asp-for="Message.ApplicationUserId"/>
               <div class="row">
-                <div class="col-md-6 form-group">
+                @*<div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
+                </div>*@
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <input asp-for="Message.Subject" type="text" class="form-control"  placeholder="Subject" required style="border-radius:0px;" >
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="8" placeholder="Message" required></textarea>
+                <textarea asp-for="Message.MessageName" class="form-control"  rows="8" placeholder="Message" required style="border-radius:0px;"></textarea>
               </div>
               <div class="my-3">
-                <div class="loading">Loading</div>
+           @*     <div class="loading">Loading</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>*@
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                             <div class="text-center"><button type="submit" class="btntransparent btn">Send Message</button></div>
+                        }
+                        else
+                        {
+                            <div class="text-center">
+                                <a class="btntransparent btn" asp-area="Identity" asp-page="/Account/Login">Send Message</a>
+                                @*<button class="btntransparent" asp-area="Identity" asp-page="/Account/Login">Send Message</button>*@
+                            </div>
+                        }
+                        
             </form>
 
           </div>
