--- a/BulkyBookWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BulkyBookWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -16,7 +16,7 @@
 
     
 <h3 class="pt-4">Register - PORTAL, Create a new account.</h3>
-<h3 class="pt-4">After registering your account, check and confirm your email to complete registration process.</h3>
+<h3 class="pt-4">After registering your account, <span style="color:#cda45e;">check and confirm your email</span> to complete registration process.</h3>
 
 
 
@@ -85,7 +85,7 @@
  
             }
                    <div class=" py-2 col-12">
-            <button id="registerSubmit" type="submit" class="btn" style="border-radius:50px;background:#cda45e;width:300px;color:white;">Register</button>
+            <button id="registerSubmit" type="submit" class="btn btntransparent p-2" style="width:200px;">Register</button>
 
             </div>
          
