--- a/BulkyBookWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BulkyBookWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -44,13 +44,13 @@
                     </div>
                 </div>
                 <div class="mt-3">
-                    <button id="login-submit" type="submit" class="w-100 btn" style="background:#cda45e;border-radius:50px;letter-spacing:1px;color:white;">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btnone" style="border:2px solid #cda45e;border-radius:50px;letter-spacing:1px;color:white;">Log in</button>
 
                    @*  <a asp-area="Identity" asp-page="/Account/Login" class="book-a-table-btn scrollto d-none d-lg-flex">Login</a>*@
                 </div>
                <div class="form-floating mt-3 text-center">
                     <p>
-                        <a class="hover-underline" id="forgot-password" asp-page="./ForgotPassword" style="color:#cda45e;;">Forgot your password?</a>
+                        <a class="hover-underline" id="forgot-password" asp-page="./ForgotPassword" style="color:#cda45e;">Forgot your password?</a>
                     </p>
               
                 </div>
