--- a/BulkyBookWeb/wwwroot/css/style.css
+++ b/BulkyBookWeb/wwwroot/css/style.css
@@ -107,11 +107,36 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
 }
 
+
+
+
+/*blinkin button*/
+
+.blinkin {
+    animation:blinkbutton 2s infinite;
+    
+}
+
+@keyframes blinkbutton {
+
+    0% {
+        opacity: 0.1;
+    }
+    100% {
+        opacity:1;text-shadow:1px 0px 30px red;
+    }
+    
+}
+
+
+
+
+
 /*--------------------------------------------------------------
 # Disable aos animation delay on mobile devices
 --------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
-  [data-aos-delay] {
+    [data-aos-delay] {
     transition-delay: 0 !important;
   }
 }
