--- a/BulkyBookWeb/wwwroot/css/toaster.css
+++ b/BulkyBookWeb/wwwroot/css/toaster.css
@@ -133,7 +133,7 @@ button.toast-close-button {
         -webkit-box-shadow: 0 0 12px #999;
         box-shadow: 0 0 12px #999;
         color: #FFF;
-        opacity: .8;
+        /*opacity: .8;*/
         -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
         filter: alpha(opacity=80)
     }
@@ -183,23 +183,25 @@ button.toast-close-button {
     }
 
 .toast {
-    background-color: #030303
+    /*background-color: #030303;*/
+    background-color: #cda45e;
 }
 
 .toast-success {
-    background-color: #cda45e !important;
+    background-color: #cda45e  !important;
+    
 }
 
 .toast-error {
-    background-color: #BD362F
+    background-color: #cda45e !important
 }
 
 .toast-info {
-    background-color: #2F96B4
+    background-color: #cda45e !important
 }
 
 .toast-warning {
-    background-color: #F89406
+    background-color: #cda45e !important
 }
 
 .toast-progress {
