--- a/BulkyBookWeb/Views/Shared/_Layout1.cshtml
+++ b/BulkyBookWeb/Views/Shared/_Layout1.cshtml
@@ -87,12 +87,22 @@
                                     </ul>
                                 </li>*@
                                 <li><a asp-area="Admin" asp-controller="Category" asp-action="Index">Category Mgmt</a></li>
-                                <li><a asp-area="Admin" asp-controller="Video" asp-action="Index">Video Mgmt</a></li>
+                               
                                 <li><a asp-area="Admin" asp-controller="Comment" asp-action="Index">Comment Mgmt</a></li>
                                 <li><a asp-area="Admin" asp-controller="Message" asp-action="Index">Message Mgmt</a></li>
 
                             </ul>
                         </li>
+
+                        <li class="dropdown">
+                            <a href="#"><span>Content Mgmt 2</span> <i class="bi bi-chevron-down"></i></a>
+                            <ul>                 
+                                <li><a asp-area="Admin" asp-controller="Video" asp-action="Index">Video Mgmt</a></li>
+                                <li><a asp-area="Admin" asp-controller="Gallery" asp-action="Index">Gallery Mgmt</a></li>
+
+                            </ul>
+                        </li>
+
 
                         <li class="dropdown">
                             <a href="#"><span>User Mgmt</span> <i class="bi bi-chevron-down"></i></a>
