--- a/BulkyBookWeb/wwwroot/css/style.css
+++ b/BulkyBookWeb/wwwroot/css/style.css
@@ -959,7 +959,7 @@ section {
 # Events
 --------------------------------------------------------------*/
 .events {
-  background: url(../img/events-bg.jpg) center center no-repeat;
+  background: url(../img/Beijing2022.jpg) center center no-repeat;
   background-size: cover;
   position: relative;
 }
