--- a/BulkyBookWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BulkyBookWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -30,48 +30,48 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
           
             <div class="form-floating py-2 col-12" >
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" style="height:45px;" />
                 <label asp-for="Input.Email" class="ms-2" style="color:black;"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating py-2 col-6" >
-                <input asp-for="Input.Name" class="form-control"  aria-required="true"  />
+                <input asp-for="Input.Name" class="form-control"  aria-required="true" style="height:45px;" />
                 <label asp-for="Input.Name" class="ms-2" style="color:black;"></label>
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
             </div>
             
             <div class="form-floating py-2 col-6" >
-                <input asp-for="Input.PhoneNumber" class="form-control" aria-required="true"  />
+                <input asp-for="Input.PhoneNumber" class="form-control" aria-required="true"  style="height:45px;"/>
                 <label asp-for="Input.PhoneNumber" class="ms-2" style="color:black;"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-floating py-2 col-6" >
-                <input asp-for="Input.StreetAddress" class="form-control" aria-required="true"   />
+                <input asp-for="Input.StreetAddress" class="form-control" aria-required="true"   style="height:45px;"/>
                 <label asp-for="Input.StreetAddress" class="ms-2" style="color:black;"></label>
                 <span asp-validation-for="Input.StreetAddress" class="text-danger"></span>
             </div>
             <div class="form-floating py-2 col-6" >
-                <input asp-for="Input.City" class="form-control" aria-required="true"   />
+                <input asp-for="Input.City" class="form-control" aria-required="true"  style="height:45px;" />
                 <label asp-for="Input.City" class="ms-2" style="color:black;"></label>
                 <span asp-validation-for="Input.City" class="text-danger"></span>
             </div>
             <div class="form-floating py-2 col-6" >
-                <input asp-for="Input.State" class="form-control"  aria-required="true"  />
+                <input asp-for="Input.State" class="form-control"  aria-required="true"  style="height:45px;"/>
                 <label asp-for="Input.State" class="ms-2" style="color:black;"></label>
                 <span asp-validation-for="Input.State" class="text-danger"></span>
             </div>
             <div class="form-floating py-2 col-6" >
-                <input asp-for="Input.PostalCode" class="form-control"  aria-required="true"/>
+                <input asp-for="Input.PostalCode" class="form-control"  aria-required="true" style="height:45px;"/>
                 <label asp-for="Input.PostalCode" class="ms-2" style="color:black;"></label>
                 <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
             </div>
             <div class="form-floating py-2 col-6" >
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true"   />
+                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true"  style="height:45px;" />
                 <label asp-for="Input.Password" class="ms-2" style="color:black;"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-floating py-2 col-6" >
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true"  />
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" style="height:45px;" />
                 <label asp-for="Input.ConfirmPassword" class="ms-2" style="color:black;"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
