--- a/BulkyBookWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyBookWeb/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
                                 <li><a asp-area="Admin" asp-controller="Message" asp-action="Index">Message Mgmt</a></li>
                                 <li><a asp-area="Admin" asp-controller="Video" asp-action="Index">Video Mgmt</a></li>
                                 <li><a asp-area="Admin" asp-controller="Gallery" asp-action="Index">Gallery Mgmt</a></li>
-                              
+                              <li><a asp-area="Admin" asp-controller="Upcomming" asp-action="Index">Upcoming Games Mgmt</a></li>
 
                             </ul>
                         </li>                                 
