--- a/BulkyBookWeb/Views/Shared/_Layout1.cshtml
+++ b/BulkyBookWeb/Views/Shared/_Layout1.cshtml
@@ -86,6 +86,7 @@
 
                                  <li><a asp-area="Admin" asp-controller="Video" asp-action="Index">Video Mgmt</a></li>
                                 <li><a asp-area="Admin" asp-controller="Gallery" asp-action="Index">Gallery Mgmt</a></li>
+                                <li><a asp-area="Admin" asp-controller="Upcomming" asp-action="Index">Upcoming Games Mgmt</a></li>
 
                             </ul>
                         </li>
